Fix icons overflow

--- a/assets/css/pokemon.css
+++ b/assets/css/pokemon.css
@@ -99,6 +99,8 @@
 
 .icon-img-container {
   max-width: 100px;
+  max-height: 100px;
+  height: 100px;
 }
 
 .small-icon {
